--- a/blogStyles/mainBlog.css
+++ b/blogStyles/mainBlog.css
@@ -308,6 +308,9 @@ img{
     display: block;
     margin-top: 10px;
 }
+#rating{
+    margin-top: -2px
+    }
 
 #pricePage{
   display: flex;
@@ -322,3 +325,4 @@ img{
   width: 100%;
 }
 }
+
